Tue Apr 28 18:00:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_cegcc.GNU:
          No prelib for cegcc

Tue Apr 28 17:42:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessWinCE_Unix.pm:
        * bin/PerlACE/TestTarget_WinCE.pm:
          Extended for WinCE cross platform testing

Tue Apr 28 11:42:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SSL/SSL_Context.cpp (set_mode):
          Reverted change below, it breaks current ssl support

Tue Apr 28 09:39:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SSL/SSL_Context.cpp (set_mode):
        Fix compile error with OpenSSL 1.0 beta 2. Thanks to
        Jules Colding  <colding at 42tools dot com> for reporting this

Tue Apr 28 09:30:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks6.3.GNU:
          Fixed vxworks 6.7 rtp shared library link

Tue Apr 28 09:26:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.cpp:
          Fixed vxworks warning

        * ace/Service_Object.cpp:
          Layout changes

Tue Apr 28 07:58:16 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/ProcessWinCE_Unix.pm:
        * bin/PerlACE/Run_Test.pm:
        * bin/PerlACE/TestTarget_WinCE.pm:
          Changed to run Windows CE tests, build with CE gcc, on Linux.

Fri Apr 24 20:40:16 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/ace_guidelines.vsmacros:

          Excluded Purify files from edit macros.

Fri Apr 24 12:21:06 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Recursive_Thread_Mutex.h:
          Doxygen change

        * ace/config-cygwin32.h:
          Change for Cygwin 1.7

        * ace/OS_NS_unistd.cpp (num_processors_online):
          Don't use a hard max of 32.
